fixed form alignment

--- a/css/style.css
+++ b/css/style.css
@@ -377,7 +377,6 @@
                 }
                 .mc-field-group input {
                     width: 300px;
-                    margin: 16px 0;
                     border: solid 3px #d427ff;
                 }
                 #mc-embedded-subscribe {
